--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@ body {
 	height: 100%;
 }
 .preview {
-	max-width: 100%;
-	max-height: 100%;
+	max-width: 100vw;
+	max-height: 100vh;
 }
 .full_table {
 	display: table;
